# recipe-api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
recipes/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
sm_api_project/: asgi.py  settings.py  urls.py  wsgi.py
